# bevy_experimental_editor

./: .gitignore  Cargo.toml  EDITOR_README.md  EDITOR_RUNTIME_FIXES.md  EDITOR_SUCCESS.md  MULTI_SCENE_INTEGRATION_GUIDE.md  PROJECT_STATUS.md  README.md  SESSION_SUMMARY.md  TILEMAP_EDITOR_PROGRESS.md  TILEMAP_IMPLEMENTATION_SUMMARY.md  WSL_FILE_DIALOG_FIX.md
.cargo/: config.toml
assets/levels/: test_level.json
crates/bevy_editor/: Cargo.toml
crates/bevy_editor/src/: asset_browser.rs  asset_browser_panel.rs  bevy_cli_runner.rs  camera.rs  collision_editor.rs  component_registry.rs  editor_commands.rs  editor_history.rs  gizmos.rs  inspector_panel.rs  layer_manager.rs  layer_panel.rs  main.rs  map_canvas.rs  panel_manager.rs  project_generator.rs  project_manager.rs  project_wizard.rs  rendering.rs  scene_editor.rs  scene_loader.rs  scene_loader_template.rs  scene_tabs.rs  scene_tree_panel.rs  selection.rs  shortcuts.rs  systems.rs  tile_painter.rs  tilemap_component.rs  tileset_manager.rs  toolbar.rs  ui.rs  viewport_selection.rs  workspace.rs
crates/bevy_editor/src/formats/: components.rs  entities.rs  entity_definition.rs  level_format.rs  math.rs  mod.rs  project_format.rs  scene_format.rs  tilemap.rs  world_export.rs
crates/bevy_editor_app/: Cargo.toml
crates/bevy_editor_app/examples/: headless.rs
crates/bevy_editor_app/src/: lib.rs  scene_loader.rs  systems.rs
crates/bevy_editor_assets/: Cargo.toml  README.md
crates/bevy_editor_assets/src/: lib.rs  texture_browser.rs
crates/bevy_editor_commands/: Cargo.toml
crates/bevy_editor_commands/src/: history.rs  lib.rs
crates/bevy_editor_core/: Cargo.toml
crates/bevy_editor_core/src/: camera.rs  editor_history.rs  gizmos.rs  lib.rs  selection.rs  shortcuts.rs
crates/bevy_editor_formats/: Cargo.toml
crates/bevy_editor_formats/src/: entities.rs  entity_definition.rs  lib.rs  scene_format.rs  tilemap.rs  world_export.rs
crates/bevy_editor_foundation/: Cargo.toml
crates/bevy_editor_foundation/src/: lib.rs  palette.rs  selection.rs  state.rs
crates/bevy_editor_frontend_api/: Cargo.toml
crates/bevy_editor_frontend_api/src/: asset_browser.rs  frontend.rs  inspector.rs  lib.rs  panels.rs  project_browser.rs  scene_tree.rs
crates/bevy_editor_project/: Cargo.toml  README.md
crates/bevy_editor_project/src/: bevy_cli_runner.rs  file_dialog_helper.rs  lib.rs  project_generator.rs  project_manager.rs  project_wizard.rs  workspace.rs
crates/bevy_editor_project/tests/: project_core_smoke.rs
crates/bevy_editor_runtime/: Cargo.toml
crates/bevy_editor_runtime/src/: lib.rs
crates/bevy_editor_scene/: Cargo.toml
crates/bevy_editor_scene/src/: lib.rs
crates/bevy_editor_templates/: Cargo.toml
crates/bevy_editor_templates/src/: lib.rs
crates/bevy_editor_templates/templates/editor_game/: .gitignore
crates/bevy_editor_templates/templates/empty/.cargo/: config.toml
crates/bevy_editor_templates/templates/empty/src/: main.rs
crates/bevy_editor_templates/templates/sprite_2d/: Cargo.toml.template  DEVELOPMENT.md
crates/bevy_editor_templates/templates/sprite_2d/src/: main.rs
crates/bevy_editor_templates/templates/tilemap_2d/: Cargo.toml.template
crates/bevy_editor_templates/templates/tilemap_2d/src/: main.rs
crates/bevy_editor_tilemap/: Cargo.toml  README.md
crates/bevy_editor_tilemap/src/: collision_editor.rs  layer_manager.rs  lib.rs  map_canvas.rs  tile_painter.rs  tilemap_component.rs  tileset_manager.rs
crates/bevy_editor_ui_egui/: Cargo.toml
crates/bevy_editor_ui_egui/src/: asset_browser_panel.rs  build_progress_ui.rs  cli_output_panel.rs  collision_editor.rs  component_registry.rs  current_level.rs  editor_commands.rs  entity_templates.rs  frontend.rs  gizmos.rs  icons.rs  inspector_panel.rs  layer_panel.rs  lib.rs  panel_manager.rs  shortcuts.rs  (+9 more)
crates/eryndor-client/: Cargo.toml
crates/eryndor-client/src/: level_loader.rs  main.rs  physics_timer.rs  tilemap_renderer.rs
crates/eryndor-common/: Cargo.toml
crates/eryndor-common/src/: lib.rs  project_format.rs  scene_format.rs  tilemap.rs
crates/eryndor-editor/: Cargo.toml  create_test_tileset.py  project.eryndor
crates/eryndor-editor/assets/tilesets/: level.json
crates/eryndor-editor/assets/world/: world.json
crates/eryndor-editor/src/: asset_browser.rs  asset_browser_panel.rs  bevy_cli_runner.rs  build_manager.rs  build_progress_ui.rs  cli_output_panel.rs  client_launcher.rs  collision_editor.rs  component_registry.rs  dock_layout.rs  editor_commands.rs  editor_history.rs  entity_templates.rs  gizmos.rs  icons.rs  inspector_panel.rs  layer_manager.rs  layer_panel.rs  main.rs  map_canvas.rs  panel_manager.rs  project_browser.rs  project_browser_panel.rs  project_generator.rs  project_manager.rs  project_ui.rs  project_wizard.rs  rendering.rs  scene_editor.rs  scene_loader.rs  scene_tabs.rs  scene_tree_panel.rs  selection.rs  systems.rs  tile_painter.rs  tileset_manager.rs  tileset_panel.rs  toolbar.rs  tools.rs  ui.rs  (+1 more)
crates/eryndor-editor/test-project/: project.json
crates/eryndor-editor/world/: world.json
crates/eryndor-server/: Cargo.toml
crates/eryndor-server-spacetimedb/: Cargo.toml
crates/eryndor-server-spacetimedb/src/: collision.rs  lib.rs  math.rs
crates/eryndor-server-spacetimedb/src/reducers/: mod.rs  physics.rs  upload_world_data.rs
crates/eryndor-server-spacetimedb/src/tables/: entity_definition.rs  enum_definition.rs  mod.rs  tile_collision_shape.rs  tilemap_layer.rs  tilemap_tile.rs  tileset.rs  world_metadata.rs
docs/: ARCHITECTURE.md  EDITOR_ROADMAP.md  GDD.md  LORE_COMPENDIUM.md  MAIN_STORY_QUEST.md  REFACTOR_PROGRESS.md  SCENE_MODULE_NOTES.md  USER_GUIDE.md
spacetime-demos/blackholio/client-bevy/: Cargo.toml
spacetime-demos/blackholio/client-bevy/src/: components.rs  main.rs  utils.rs
spacetime-demos/blackholio/client-bevy/src/stdb/: logged_out_player_table.rs  mod.rs
spacetime-demos/blackholio/client-bevy/src/systems/: arena.rs  camera.rs  entities.rs  input.rs  mod.rs  player.rs
spacetime-demos/blackholio/client-bevy/stdb/: mod.rs
spacetime-demos/ldtk/: README.md  TESTING.md
(+29 files in other folders)
