[package]
name = "bevy_editor"
version = "0.1.0"
edition = "2021"
description = "An experimental Bevy game editor"
license = "MIT OR Apache-2.0"

[dependencies]
bevy = { workspace = true }
bevy_editor_app = { path = "../bevy_editor_app" }
bevy_editor_ui_egui = { path = "../bevy_editor_ui_egui" }
bevy-inspector-egui = "0.31"
bevy_egui = "0.34"

[lints]
workspace = true
