[package]
name = "bevy_editor_core"
version = "0.1.0"
edition = "2021"
description = "Core editor primitives for Bevy editors - selection, camera, gizmos, history, shortcuts"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bevyengine/bevy-editor"
keywords = ["bevy", "editor", "gamedev"]
categories = ["game-development", "game-engines"]

[dependencies]
bevy = { workspace = true }
bevy_egui = { version = "0.34", optional = true }

[features]
default = ["egui"]
egui = ["dep:bevy_egui"]

[lints]
workspace = true
