[package]
name = "bevy_editor_scene"
version = "0.1.0"
edition = "2021"
description = "Scene management primitives for Bevy-based editors."
license = "MIT OR Apache-2.0"
repository = "https://github.com/bevyengine/bevy-editor"
keywords = ["bevy", "editor", "scene"]
categories = ["game-development", "game-engines"]

[dependencies]
bevy = { workspace = true }
bevy_editor_formats = { path = "../bevy_editor_formats" }

[lints]
workspace = true
