[package]
name = "eryndor-client"
version = "0.1.0"
edition = "2021"
authors = ["Joe Buehler <jbuehler23@gmail.com>"]


[dependencies]
bevy = { workspace = true, features = ["file_watcher"] }
eryndor-common = { path = "../eryndor-common" }
bevy_ecs_tilemap = "0.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lints]
workspace = true
