[package]
name = "eryndor-common"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true, optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# SpacetimeDB support
spacetimedb = { version = "1.4.0", optional = true }

[features]
default = ["bevy"]
server = ["spacetimedb"]

[lints]
workspace = true
