[package]
name = "eryndor-server-spacetimedb"
version = "0.1.0"
edition = "2024"
authors = ["Joe Buehler <jbuehler23@gmail.com>"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
spacetimedb = "1.4.0"
log = "0.4"
spacetime_physics = "0.1.1"
eryndor-common = { path = "../eryndor-common", default-features = false, features = ["server"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
