[package]
name = "client-bevy"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { workspace = true }
bevy_spacetimedb = "1.0.0"
spacetimedb-sdk = { workspace = true }
# Set max log levels. This helps avoid unwanted low-severity log spam, which can affect performance.
log = { version = "0.4", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
tracing = { version = "0.1", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
